2003-05-22  Bruno Haible  <bruno@clisp.org>

	* gettext-0.12.1 released.

2003-05-17  Bruno Haible  <bruno@clisp.org>

	* gettext-0.12 released.

2003-04-24  Bruno Haible  <bruno@clisp.org>

	* lib-link.m4 (AC_LIB_RPATH): Don't set sys_lib_search_path_spec and
	sys_lib_dlsearch_path_spec.

2003-02-16  Bruno Haible  <bruno@clisp.org>

	Workaround autoconf >= 2.52 breakage.
	* lib-prefix.m4 (AC_LIB_ARG_WITH): New macro.
	(AC_LIB_PREFIX): Use it instead of AC_ARG_WITH.
	* lib-link.m4 (AC_LIB_LINKFLAGS_BODY): Likewise.


See ../../gettext-tools/m4/ChangeLog.0 for earlier changes.